--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "mongodb": "^3.1.6",
     "mongoose": "^5.2.14",
     "url-exists": "^1.0.3"
   },
